consuming ws crearCurso

--- a/web.config
+++ b/web.config
@@ -50,4 +50,6 @@
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="true"/>
 	</system.webServer>
-</configuration>
+	<appSettings>
+	<add key="CrearCursoWS.WebService" value="http://localhost:51435/WebServiceNet/WebService.asmx"/>
+	</appSettings></configuration>
